--- a/game/the-game.html
+++ b/game/the-game.html
@@ -103,6 +103,13 @@ void main()
 <canvas id="gl-canvas" width="1000" height="625">
 Oops ... your browser doesn't support the HTML5 canvas element
 </canvas>
-
+<div>
+	<p>Hero Score:</p>
+	<span id="heroScore">0</span>
+</div>
+<div>
+	<p>Villain Score:</p>
+	<span id="villainScore">0</span>
+</div>
 </body>
 </html>
